# Fog-of-War-Chess

./: Cargo.toml  README.md
client/: README.md
client/src/: piece.rs  render_utilities.rs
resources/: fog_of_war_logo.xcf
src/: default_board_state.rs  enter_name_screen.rs  event_handler.rs  game.rs  main.rs  move_struct.rs  piece.rs  piece_movement.rs  render_utilities.rs  time.rs
src/menu/: clickable.rs  create_clickable_layout.rs  menu_game_over.rs  menu_state.rs  menu_utilities.rs
src/networking/: connection.rs  events.rs
src/piece/: piece.rs  piece_movement.rs  promotion.rs
