[package]
name = "fog_of_war"
version = "0.1.0"
authors = ["Hampus Hallkvist <hallkvi@kth.org>", "Isak Einberg <ieinberg@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rust_socketio = "0.2.1"
serde_json = "1.0.64"
state = "0.4.2"
winapi = {version = "0.3", features = ["wincon", "winuser"]}